--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-player": "^2.11.0"
+    "react-player": "^2.11.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
