fix: some issue

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 #!/bin/bash env
-NEXT_PUBLIC_SERVER=192.168.100.8:8080
+NEXT_PUBLIC_SERVER=192.168.100.10:8080
+# NEXT_PUBLIC_SERVER=192.168.100.8:8080
 # NEXT_PUBLIC_SERVER=localhost:8080
