--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #!/bin/bash env
 # Solar (P)
-# NEXT_PUBLIC_SERVER=192.168.100.10:8080
+NEXT_PUBLIC_SERVER=192.168.100.17:8080
 # Apolo (M)
 # NEXT_PUBLIC_SERVER=192.168.100.8:8080
 # Localhost
-NEXT_PUBLIC_SERVER=localhost:8080
+# NEXT_PUBLIC_SERVER=localhost:8080
