style(main): new cards style and other visual changes

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-player": "^2.11.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
