--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@mui/material": "^5.10.8",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.2",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-notifications": "^1.7.4",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
+    "react-toastify": "^9.0.8",
+    "reactjs-popup": "^2.0.5",
     "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
