--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 # Localhost
 # NEXT_PUBLIC_SERVER=localhost:8080
 # Production
-NEXT_PUBLIC_SERVER=https://java-player.fly.dev/
+NEXT_PUBLIC_SERVER=java-player.fly.dev
