--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "next": "12.3.1",
+    "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
