--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,26 @@
 {
-  "name": "Next PWA demo",
-  "short_name": "Next PWA",
+  "name": "Java Player",
+  "short_name": "JPlayer",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/icons/android-chrome-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/android-chrome-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
-
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#161616",
+  "background_color": "#161616",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
